sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:20: error: ';' expected but 'while' found.
		} while(swap == true)
                  ^